2002-12-11  Danny Smith  <dannysmith@users.sourveforge.net>

	* include/shlobj.h (IShellLinkW::GetPath): Correct prototype.
	Thanks to: Dimitri Papadopoulos <dimitri_at@sourceforge.users.net>

2002-12-09  Danny Smith  <dannysmith@users.sourveforge.net>
	
	* include/shellapi.h (ExtractIconEx[AW]): Correct return type
	to UINT.
	Thanks to: Dimitri Papadopoulos <dimitri_at@sourceforge.users.net>

2002-12-07  Danny Smith  <dannysmith@users.sourveforge.net>
	
	* include/winuser.h (AllowSetForegroundWindow,
	LockSetForegroundWindow): Add prototypes.
	(ASFW_ANY, LSFW_LOCK, LSFW_UNLOCK) Add defines.
	Thanks to:  Pat Thoyts  <patthoyts@users.sourceforge.net>
	* lib/winuser.def (AllowSetForegroundWindow,
	LockSetForegroundWindow): Add stubs. 

2002-12-06  Ken Fitlike  <kenfitlike@users.sourceforge.net>

	* include/commctrl.h (TN_GETDISPINFO[AW]): Add defines and
	UNICODE mappings.
	(tagNMTTDISPINFO[AW]): Replace obsolete struct names
	tagTOOLTIPTEXT[AW] and typedefs. Add defines for backward
	compatability. Add lParam field. Add UNICODE mappings for new
	names.

2002-12-02  Andrew Stadt  <acstadt@sympatico.ca>

	* include/shellapi.h (_SHFILEOPSTRUCTA,_SHFILEOPSTRUCTW):
	Wrap with pshpack2.h/poppack.h to correct alignment.

2002-12-02  Ken Fitlike  <kenfitlike@users.sourceforge.net>

	* include/commctrl.h (LVBKIF_*): Add defines.
	(LVM_SETIMAGE[AW]): Add defines and UNICODE mappings.
	(LVM_GETIMAGE[AW]): Add defines and UNICODE mappings.
	(LVBKIMAGE[AW]): Add defines and UNICODE mappings.
	(LPLVBKIMAGE[AW]): Add defines and UNICODE mappings.
	(LVM_GETBKIMAGE[AW]): Add defines and UNICODE mappings.
	(LVM_SETBKIMAGE[AW]): Add defines and UNICODE mappings.
	(ListView_GetBkImage): Add define.
	(ListView_SetBkImage): Add define.
	(LVBKIMAGE): Add structures and typedefs.

2002-11-25  Earnie Boyd  <earnie@users.sf.net>

	* include/w32api.h: Increment to version 2.2
	* Makefile.in: Ditto.

2002-11-25  Earnie Boyd  <earnie@users.sf.net>
