@@ -23,13 +23,17 @@
 #define DISPID_ACC_HITTEST                  (-5017)
 #define DISPID_ACC_DODEFAULTACTION          (-5018)
 
-#define SELFLAG_NONE                    0x00000000
-#define SELFLAG_TAKEFOCUS               0x00000001
-#define SELFLAG_TAKESELECTION           0x00000002
-#define SELFLAG_EXTENDSELECTION         0x00000004
-#define SELFLAG_ADDSELECTION            0x00000008
-#define SELFLAG_REMOVESELECTION         0x00000010
-#define SELFLAG_VALID                   0x0000001F
+typedef enum tagSELFLAG 
+{
+  SELFLAG_NONE = 0,
+  SELFLAG_TAKEFOCUS = 1,
+  SELFLAG_TAKESELECTION = 2,
+  SELFLAG_EXTENDSELECTION = 4,
+  SELFLAG_ADDSELECTION = 8,
+  SELFLAG_REMOVESELECTION = 16
+} SELFLAG; 
+
+#define SELFLAG_VALID	0x0000001F
 
 /* DEFINE_GUID(LIBID_Accessibility, 0x1ea4dbf0, 0x3c3b,0x11cf, 0x81, 0x0c, 0x00, 0xaa, 0x00, 0x38, 0x9b, 0x71); */
 /* DEFINE_GUID(IID_IAccessible,     0x618736e0, 0x3c3d,0x11cf, 0x81, 0x0c, 0x00, 0xaa, 0x00, 0x38, 0x9b, 0x71); */
